# boilit

./: Cargo.toml  README.md  boilit.toml  buildMacOS.sh  config.toml  index.ts
.github/workflows/: release.yaml
src/: main.rs
