[package]
name = "boilit"
version = "0.1.0"
edition = "2021"
authors = ["Adam Schlichtmann adam.schlichtmann1113@gmail.com"]
readme = "README.md"
homepage = "https://github.com/Adam-Schlichtmann/boilit"
repository = "https://github.com/Adam-Schlichtmann/boilit"
keywords = ["cli", "boilerplate"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
cwd = "1.1.6"
regex = "1.10.2"
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.5.2"
